# whittle

./: .editorconfig  .oxfmtrc.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  .renovaterc.json5  Cargo.toml  LICENSE.md  README.md  release-please-config.json
.github/: actionlint.yaml
.github/workflows/: actionlint.yml  ci.yml  napi-build.yml  napi.yml  release-napi.yml  release-please.yml  release.yml
crates/whittle/: CHANGELOG.md  Cargo.toml
crates/whittle-napi/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  test.mjs
crates/whittle-napi/src/: lib.rs
crates/whittle/src/: config.rs  lib.rs  lint.rs  main.rs  transform.rs
crates/whittle/tests/: integration.rs
